# ggj-2023

./: .gitignore  build.mjs  index.html  package-lock.json  package.json  temp2.json  tsconfig.json
extensible-lambda-calculus/: Cargo.toml
extensible-lambda-calculus/src/: lib.rs
game/: package-lock.json  package.json  tsconfig.json  vite.config.js
game/src/: index.tsx  recursion.tsx
game/src/editor/: lambda-calc-editor.tsx
game/src/editor/grammar/: lc.grammar
game/src/editor/parser/: parser.terms.ts  parser.ts
game/src/lambda-calculus/: data-conversions.tsx  lambda-calculus.tsx  parse.tsx
game/src/levels/: common.tsx  levels.css
lambda-src/: nat.lambda
public/: terrain.frag  terrain.vert  vine.frag  vine.vert
src/: App.css  App.tsx  BetterMap.ts  GameState.ts  MeshLoader.ts  ObjLoader.ts  Physics.ts  Render.ts  SpatialHashTable.ts  Vine.ts  VineGraphics.ts  dependency-graph.ts  index.ts  lambda-calculus-compiler.ts  lambda-calculus.test.ts  levels.tsx  main.ts  recursion.test.ts  result.ts  style.css
src/lambda-calculus/: CodeEditor.tsx  church-numerals.tsx  debug-output.tsx  interpreter.tsx  parser.tsx
src/levels/: Level1.tsx  Level2.tsx  Level3.tsx  Level4.tsx  Level5.tsx  Level6.tsx  LevelsOrder.tsx
src/levels/basics/: Basics1.tsx  Basics2.tsx  Basics3.tsx
src/levels/booleans/: And.tsx  Not.tsx  Or.tsx  Xor.tsx
src/levels/numbers/: Addition.tsx  Multiplication.tsx  Numbers.tsx  Successor.tsx
src/parsers/: arrow.ts  traditional.ts
src/reusable-components/: ClickToShow.tsx
src/sandbox/: Sandbox.css  Sandbox.tsx
(+4 files in other folders)
