[package]
name = "extensible-lambda-calculus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=-z stack-size=268435456",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
logos = "*"
regex = "*"
lazy_static = "*"
console_error_panic_hook = "*"

[profile.release]
debug = true